--- a/src/frontend/app/themes/default/general/list_of_components.scss
+++ b/src/frontend/app/themes/default/general/list_of_components.scss
@@ -15,7 +15,19 @@
 
 @import '../constants';
 
-.cards_list{
+.list_view{
+  overflow-x: auto;
+  margin-bottom: 20px;
+  background: #fff;
+  padding: 1.5vw;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.grid_view{
   margin-bottom: 20px;
   display: flex;
   flex-wrap: wrap;
@@ -147,7 +159,7 @@
   white-space: nowrap;
   max-width: 100%;
   font-family: $FONT_FAMILY;
-  font-size: 2vw;
+  font-size: 1.6vw;
   color: #000000;
   font-weight: normal;
 }
