--- a/src/frontend/app/themes/default/constants.scss
+++ b/src/frontend/app/themes/default/constants.scss
@@ -51,6 +51,18 @@ $ANIMATION_SCALE_DISAPPEAR: AScaleDisappear;
 $ANIMATION_EMPHASIZE: AEmphasize;
 
 
+
+.card_style{
+  font-family: $FONT_FAMILY;
+  padding: 1vw 1vw 0.5vw;
+  background-color: #fff;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
 @keyframes AEmphasize {
   0%   {background-color: unset;}
   50%  {background-color: #7aced2;}
