--- a/src/frontend/app/themes/default/general/app.scss
+++ b/src/frontend/app/themes/default/general/app.scss
@@ -218,8 +218,8 @@
 }
 .upload_icon{
   position: absolute;
-  top: 10px;
-  right: 10px;
+  right: 1vw;
+  top: 1vw;
   cursor: pointer;
 }
 .image_crop_preview{
