[Fixed] OC-323 #comment fixed bug in the List component #time 2h

--- a/src/frontend/app/themes/default/general/list_of_components.scss
+++ b/src/frontend/app/themes/default/general/list_of_components.scss
@@ -332,6 +332,8 @@
 }
 .card_button_icon{
   height: 100%;
+  display: none;
+  padding: 0 !important;
 }
 .card_delete_button_icon{
   margin-left: auto;
