--- a/src/frontend/app/themes/default/constants.scss
+++ b/src/frontend/app/themes/default/constants.scss
@@ -12,6 +12,7 @@
  * You should have received a copy of the GNU General Public License
  * along with this program. If not, see <http://www.gnu.org/licenses/>.
  */
+$TURQUOISE_COLOR: #00ACC2;
 $SUCCESS_COLOR: #359d47;
 $ERROR_COLOR: #c92727;
 $REMOVE_ICON_COLOR: rgba(201, 39, 39, 0.85);
