[Modified] OC-323 #comment implemented Form Component and its set up  #time 5h

--- a/src/frontend/app/themes/default/general/basic_components.scss
+++ b/src/frontend/app/themes/default/general/basic_components.scss
@@ -237,6 +237,9 @@
   color: #fff !important;
   background-color: #007bff !important;
   border-color: #007bff;
+  input{
+    display: none;
+  }
 }
 .input_file_browse:active{
   color: #fff !important;
