--- a/src/frontend/app/themes/default/general/form_component.scss
+++ b/src/frontend/app/themes/default/general/form_component.scss
@@ -1,11 +1,30 @@
 @import "../constants";
+.buttons_panel{
+  margin: 20px 0;
+  display: flex;
+  >:not(:last-child){
+    margin-right: 10px;
+  }
+}
 
+.form_component{
+  display: grid;
+  grid-template-columns: 50% 50%;
+  row-gap: 40px;
+  column-gap: 20px;
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+@media screen and (max-width: 756px) {
+  .form_component{
+    grid-template: none;
+  }
+}
 .form{
   @extend .card_style;
   padding: 70px 20px 0 0;
-  margin: 0;
+  margin: 20px 0 0;
   position: relative;
-  .form_title{
+  .form_section_header{
     top: -20px;
     left: 10px;
     position: absolute;
@@ -22,18 +41,15 @@
   }
 }
 
-.form_component{
-  display: grid;
-  grid-template-columns: 50% 50%;
-  row-gap: 40px;
-  column-gap: 20px;
-}
-
 .subform{
   display: grid;
   grid-template-columns: 100%;
   row-gap: 40px;
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
   >div{
     @extend .form;
+  }
+  >:nth-child(2){
+    margin: 0;
   }
 }
