--- a/src/frontend/app/themes/default/general/list_of_components.scss
+++ b/src/frontend/app/themes/default/general/list_of_components.scss
@@ -42,6 +42,7 @@
     position: relative;
   }
   .actions{
+    transition: unset;
     position: absolute;
     top: calc(50% - 15px);
     left: 50%;
@@ -54,7 +55,7 @@
       }
     }
   }
-  .minimized_actions{
+  .maximized_actions{
     @extend .actions;
     top: calc(50% - 19px);
     left: unset;
