--- a/src/frontend/app/themes/default/general/form_methods.scss
+++ b/src/frontend/app/themes/default/general/form_methods.scss
@@ -698,6 +698,9 @@
   text-align: center;
   margin-top: 20px;
 }
+.no_templates_error{
+  color: $ERROR_COLOR;
+}
 
 .template_select{
   margin: 30px 0;
