[Improved] OC-323 #comment renamed EntityChange into EntityForm components; changed User and User Group view #time 8h

--- a/src/frontend/app/themes/default/content/connections/change.scss
+++ b/src/frontend/app/themes/default/content/connections/change.scss
@@ -6,12 +6,8 @@
   /* autoprefixer: off */
   grid-row-end: 3;
   height: auto;
-  min-height: 735px;
+  box-shadow: none !important;
 }
 
 .switch_view_icon{
-  position: absolute;
-  right: 50px;
-  top: 15px;
-  z-index: 100;
 }
