--- a/src/frontend/app/themes/default/general/app.scss
+++ b/src/frontend/app/themes/default/general/app.scss
@@ -225,7 +225,7 @@
 .image_crop_preview{
   width: 50px;
   position: absolute;
-  left: 0;
-  top: 20px;
+  left: 5px;
+  top: 5px;
   border-radius: 2px;
 }
