--- a/src/frontend/app/themes/default/general/basic_components.scss
+++ b/src/frontend/app/themes/default/general/basic_components.scss
@@ -336,9 +336,10 @@
   font-family: $FONT_FAMILY;
   margin: 0 !important;
   min-height: 0 !important;
+  text-align: left !important;
   >div {
-    height: 23px;
-    width: 23px;
+    height: 22px;
+    width: 22px;
   }
 }
 .tooltip_switch{
