--- a/src/frontend/app/themes/default/general/change_component.scss
+++ b/src/frontend/app/themes/default/general/change_component.scss
@@ -1433,6 +1433,9 @@
     width: 100px;
     top: -3px;
   }
+  .image_crop{
+    margin-left: 6%;
+  }
 }
 .test_button{
   margin: 20px 0;
@@ -1446,4 +1449,11 @@
     width: 15px;
     height: 15px;
   }
+}
+
+.user_photo{
+  @extend .form_image;
+}
+.user_group_icon{
+  @extend .form_image;
 }
