--- a/src/frontend/app/themes/default/general/form_component.scss
+++ b/src/frontend/app/themes/default/general/form_component.scss
@@ -27,7 +27,7 @@
   position: relative;
   .form_section_header{
     z-index: 100;
-    transition: top 0.3s cubic-bezier(.25,.8,.25,1);
+    transition: all 0.5s cubic-bezier(.25,.8,.25,1);
     cursor: pointer;
     top: -20px;
     left: 10px;
