--- a/src/frontend/app/themes/default/general/change_component.scss
+++ b/src/frontend/app/themes/default/general/change_component.scss
@@ -217,7 +217,7 @@
   font-family: $FONT_FAMILY;
 }
 .form_input_readonly_input{
-  margin: 0 65px;
+  //margin: 0 65px 0 0;
 }
 .form_input_label_for_connection{
   font-family: $FONT_FAMILY;
