[Modified] OC-324 #comment changed dragging process in BussinessLayout #time 4h

--- a/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
@@ -776,3 +776,9 @@ $HIGHLIGHT_COLOR: #8a9dd7;
   right: 10px;
   top: 100px;
 }
+
+.draggable_process{
+  fill: none !important;
+  stroke: #00acc2 !important;
+  stroke-width: 2px;
+}
