--- a/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
+++ b/src/frontend/app/themes/default/content/connections/connection_overview_2.scss
@@ -136,12 +136,20 @@ $HIGHLIGHT_COLOR: #8a9dd7;
   background: #fafafa;
   border: 1px solid #eee;
 }
+.business_layout_extended{
+  @extend .business_layout;
+  height: 100vh;
+}
 .technical_layout{
   width: 100%;
   height: 100%;
   position: relative;
   background: #fafafa;
   border: 1px solid #eee;
+}
+.technical_layout_extended{
+  @extend .technical_layout;
+  height: 100vh;
 }
 .layout_svg {
   cursor: move;
