[Modified] OC-323 #comment implemented assignment in different windows #time 6h

--- a/src/frontend/app/themes/default/content/connections/change.scss
+++ b/src/frontend/app/themes/default/content/connections/change.scss
@@ -5,7 +5,7 @@
   grid-row-start: 2;
   /* autoprefixer: off */
   grid-row-end: 3;
-  height: auto;
+  height: 750px;
   box-shadow: none !important;
 }
 
