--- a/src/frontend/app/themes/default/constants.scss
+++ b/src/frontend/app/themes/default/constants.scss
@@ -12,6 +12,7 @@
  * You should have received a copy of the GNU General Public License
  * along with this program. If not, see <http://www.gnu.org/licenses/>.
  */
+$BACKGROUND_MENU_COLOR: #012E55;
 $TURQUOISE_COLOR: #00ACC2;
 $SUCCESS_COLOR: #359d47;
 $ERROR_COLOR: #c92727;
