--- a/src/frontend/app/themes/default/layout/header.scss
+++ b/src/frontend/app/themes/default/layout/header.scss
@@ -173,3 +173,21 @@
     padding: 4px;
   }
 }
+.notifications{
+  position: relative;
+}
+
+.notification_number{
+  cursor: pointer;
+  text-align: center;
+  position: absolute;
+  border-radius: 50px;
+  background: white;
+  font-size: 10px;
+  right: -7px;
+  padding: 2px;
+  font-weight: 700;
+  top: -5px;
+  width: 20px;
+  height: 20px;
+}
